apps-dev/prometheus/gitops/service/ingressrule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espsrcprometheus-ingress
  namespace: espsrcprometheus
  #annotations:
  #  traefik.ingress.kubernetes.io/router.middlewares: espsrcprometheus-strip-espsrcprometheus@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "dev.monitor.espsrc.iaa.csic.es"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: espsrcgrafana-test
                port:
                  number: 80
